# stylinon

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  load_data.py  pyproject.toml  pytest.ini
app/: alembic.ini  helpers.py  main.py
app/admin/: auth.py  dependencies.py  main.py
app/admin/views/: categories.py  order.py  order_item.py  product.py  products.py  user.py
app/src/application/acquiring/: dto.py  enums.py  exceptions.py  interface.py  service.py
app/src/infrastructure/: logging_config.py  settings.py
app/st_admin/: main.py
app/st_admin/views/: category.py  user.py
nginx/: Dockerfile  nginx.conf
products_data/: cemtorg.xlsx
prometheus/: prometheus.yml
tests/: conftest.py
tests/integration/: conftest.py  test_jwt_processor.py
tests/integration/acquiring/: test_acquiring_gateway.py  test_update_order_by_webhook.py
tests/integration/auth/: test_auth.py
tests/integration/mocks/: smtp_server.py
tests/integration/orders/: test_orders.py
tests/integration/repositories/: test_order_items_repository.py  test_order_repository.py  test_product_repository.py  test_user_repository.py
tests/load_testing/: locustfile.py
tests/unit/: test_calculate_prices.py
tests/unit/acquiring/: test_acquiring_funcs.py
tests/unit/domain/: test_product.py
tests/unit_tests/orders/: test_order_items_repository.py  test_order_repository.py
tests/unit_tests/products/: test_product_repository.py
tests/unit_tests/users/: test_user_repository.py
(+179 files in other folders)
