[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vedaka1 <vladik.kuleshov.2003@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
aiohttp = "^3.10.1"
fastapi = "^0.112.0"
dishka = "^1.2.0"
sqlalchemy = "^2.0.32"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
alembic = "^1.13.2"
orjson = "^3.10.7"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.8.2"}
asyncpg = "^0.29.0"
python-multipart = "^0.0.9"
pytz = "^2024.1"
aiosmtplib = "^3.0.2"
websockets = "^13.1"
sqladmin = {extras = ["full"], version = "^0.19.0"}
jinja2 = "^3.1.4"
starlette-admin = {extras = ["i18n"], version = "^0.14.1"}
python-logging-loki = "^0.3.1"

[tool.poetry.group.lint.dependencies]
mypy = "^1.11.1"
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
testcontainers = {extras = ["postgres"], version = "^4.8.0"}
pytest-cov = "^5.0.0"
locust = "^2.31.8"

[tool.mypy]
strict = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "type-abstract"]
color_output = true
pretty = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 120
exclude = ["migrations"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
